# test

./: .env  .gitignore  Makefile  errors_ch.ini  pyproject.toml  trying.py  turing-zone-413110-9196fc82c6f8.json
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
test/: .env  trying.py
