[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Narymm Kate"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
prompt = "^0.4.1"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
